# HSE_labs

./: алгосы.tex
HW_01/: Makefile
HW_01/include/: bmp.h
HW_01/src/: bmp.c  main.c
HW_02/: Makefile
HW_02/include/: Board.h  BoardTest.h
HW_02/src/: Board.cpp  main.cpp
HW_02/test/: BoardTest.cpp  Test.cpp  test.cpp
correct/include/: doComputation.h
hw_02/: Makefile
hw_02/include/: Board.h  BoardTest.h  Test.h
hw_02/src/: Board.cpp  main.cpp
hw_02/test/: BoardTest.cpp  Test.cpp
hw_03/: CMakeLists.txt
hw_03/include/: CLI.h  Huffman.h  HuffmanArchiver.h
hw_03/src/: CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp  main.cpp
hw_03/test/: TestCLI.cpp  TestHuffmanArchiver.cpp
lab_01/multiple/: Makefile
lab_02/: Makefile
lab_02/include/: str.h  test_str.h
lab_02/src/: str.c  test.c  test_str.c
lab_03/: Makefile
lab_03/include/: clist.h
lab_03/src/: clist.c  main.c
lab_04/: Makefile
lab_04/include/: mergesort.h
lab_04/src/: main.c  mergesort.c
lab_05/: Makefile  pok.txt
lab_05/include/: clist.h  point_list.h
lab_05/src/: clist.c  main.c  point_list.c
lab_09/: Makefile
lab_09/src/: shared_ptr.cpp
lab_10/: Makefile
lab_10/include/: Circle.hpp  Figure.hpp  Rectangle.hpp  Scheme.hpp
lab_10/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  Scheme.cpp  main.cpp
lab_11/: Makefile
lab_11/include/: bin_manip.hpp  employees.hpp
lab_11/src/: bin_manip.cpp  employees.cpp  main.cpp
lab_12/: Makefile
lab_12/include/: my_vector.h  my_vector_impl.h
lab_12/src/: main.cpp
lab_13/: Makefile
lab_13/src/: main.cpp
lab_14/: Makefile
(+11 files in other folders)
